// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollableTab All Used Icon Component Test should match AddIcon snapshot 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
  <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
  <path d=\\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\\"></path>
</svg>"
`;

exports[`ScrollableTab All Used Icon Component Test should match ClearIcon snapshot 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
  <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
  <path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"></path>
</svg>"
`;

exports[`ScrollableTab All Used Icon Component Test should match LeftIcon snapshot 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
  <path d=\\"M0 0h24v24H0V0z\\" fill=\\"none\\"></path>
  <path d=\\"M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z\\"></path>
</svg>"
`;

exports[`ScrollableTab All Used Icon Component Test should match RightIcon snapshot 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
  <path d=\\"M0 0h24v24H0V0z\\" fill=\\"none\\"></path>
  <path d=\\"M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z\\"></path>
</svg>"
`;

exports[`ScrollableTab Component Test should match ScrollableTab snapshot 1`] = `
"<div class=\\"tab-bar\\"><button class=\\"tab-action-button hidden\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
      <path d=\\"M0 0h24v24H0V0z\\" fill=\\"none\\"></path>
      <path d=\\"M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z\\"></path>
    </svg></button>
  <div class=\\"tab-container\\">
    <div class=\\"tab-item\\">
      <div class=\\"tab-button tab-active\\"><span>Tab-1</span><button class=\\"tab-clear-button\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
            <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
            <path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"></path>
          </svg></button></div>
    </div>
    <div class=\\"tab-item\\">
      <div class=\\"tab-button\\"><span>Tab-2</span><button class=\\"tab-clear-button\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
            <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
            <path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"></path>
          </svg></button></div>
    </div>
    <div class=\\"tab-item\\">
      <div class=\\"tab-button\\"><span>Tab-3</span><button class=\\"tab-clear-button\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
            <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
            <path d=\\"M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z\\"></path>
          </svg></button></div>
    </div>
  </div><button class=\\"tab-action-button \\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
      <path d=\\"M0 0h24v24H0V0z\\" fill=\\"none\\"></path>
      <path d=\\"M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z\\"></path>
    </svg></button><button class=\\"tab-action-button light-dark\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" width=\\"24\\">
      <path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path>
      <path d=\\"M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z\\"></path>
    </svg></button>
</div>"
`;
